--- a/examples/instancing.html
+++ b/examples/instancing.html
@@ -50,7 +50,7 @@
         mat4.translate(view, view, [0, 0, -1])
 
         const gl = canvas.getContext("webgl2");
-        const { RenderPass } = webglutil;
+        const { RenderPass } = glutenfree;
 
         const pass = RenderPass.fromProps(gl, {
             vert: `#version 300 es
