Move examples to folders

--- a/examples/image-processing/index.html
+++ b/examples/image-processing/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <script src="../dist/index.umd.js"></script>
+    <script src="../../dist/index.umd.js"></script>
     <script>
         const kernels = {
             normal: [
@@ -90,7 +90,7 @@
             return p;
         }
 
-        loadImage("assets/lenna.png", true).then(imageData => {
+        loadImage("lenna.png", true).then(imageData => {
             const canvas = document.getElementById("canvas");
             const dpr = window.devicePixelRatio;
             const w = canvas.clientWidth * dpr;
