--- a/examples/instancing/index.html
+++ b/examples/instancing/index.html
@@ -24,8 +24,8 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <script src="./assets/gl-matrix-min.js"></script>
-    <script src="../dist/index.umd.js"></script>
+    <script src="../_assets/gl-matrix-min.js"></script>
+    <script src="../../dist/index.umd.js"></script>
     <script>
         const canvas = document.getElementById("canvas");
         const dpr = window.devicePixelRatio;
