--- a/examples/triangle/index.html
+++ b/examples/triangle/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <script src="../dist/index.umd.js"></script>
+    <script src="../../dist/index.umd.js"></script>
     <script>
         const canvas = document.getElementById("canvas");
         const dpr = window.devicePixelRatio;
