--- a/examples/instancing/index.html
+++ b/examples/instancing/index.html
@@ -25,9 +25,11 @@
 <body>
     <canvas id="canvas"></canvas>
     <script src="../_assets/gl-matrix-min.js"></script>
-    <script src="../../dist/index.umd.js"></script>
-    <script>
+    <script type="module">
+        import { RenderPass } from "../../dist/glutenfree.esm.js";
+
         const canvas = document.getElementById("canvas");
+        const gl = canvas.getContext("webgl2");
         const dpr = window.devicePixelRatio;
         const w = canvas.clientWidth * dpr;
         const h = canvas.clientHeight * dpr;
@@ -48,9 +50,6 @@
 
         mat4.scale(model, model, [100, 100, 100]);
         mat4.translate(view, view, [0, 0, -1])
-
-        const gl = canvas.getContext("webgl2");
-        const { RenderPass } = glutenfree;
 
         const pass = RenderPass.fromProps(gl, {
             vert: `#version 300 es
