--- a/examples/triangle/index.html
+++ b/examples/triangle/index.html
@@ -24,15 +24,14 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <script src="../../dist/index.umd.js"></script>
-    <script>
+    <script type="module">
+        import { RenderPass } from "../../dist/glutenfree.esm.js";
+
         const canvas = document.getElementById("canvas");
         const dpr = window.devicePixelRatio;
         canvas.width = canvas.clientWidth * dpr;
         canvas.height = canvas.clientHeight * dpr;
         const gl = canvas.getContext("webgl2");
-
-        const { RenderPass } = glutenfree;
 
         const pass = RenderPass.fromProps(gl, {
             vert: `#version 300 es
