Get rid of borders

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,12 +9,16 @@
         body {
             margin: 0;
             padding: 0;
+            border: 0;
             width: 100%;
             height: 100%;
             background-color: black;
         }
 
         iframe {
+            margin: 0;
+            padding: 0;
+            border: 0;
             position: absolute;
             top: 0px;
             left: 0px;
