--- a/examples/sandbox.html
+++ b/examples/sandbox.html
@@ -8,9 +8,9 @@
         html,
         body,
         canvas {
-            margin: 0;
-            padding: 0;
-            border: 0;
+            margin: 0px;
+            padding: 0px;
+            border: 0px;
             width: 100%;
             height: 100%;
             background-color: black;
