--- a/examples/index.html
+++ b/examples/index.html
@@ -40,6 +40,10 @@
             z-index: 1;
         }
 
+        .cm-s-liquibyte.CodeMirror {
+            background-color: rgb(20, 20, 20) !important;
+        }
+
         #menu {
             position: absolute;
             top: 0px;
@@ -52,7 +56,7 @@
             opacity: 0.85;
             z-index: 1;
             color: rgb(200, 200, 200);
-            background-color: rgb(10, 10, 10);
+            background-color: rgb(20, 20, 20);
             font-family: monospace;
             font-size: 1.2em;
         }
